<resources>

    <string name="app_name">RetrofitAuthToken</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="enter">enter</string>
    <string name="users_avatar">users avatar</string>
    <string name="quit">quit</string>
    <string name="fill_credentials">Fill credentials</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="some_text">someText</string>

</resources>