<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authscreen.AuthFragment">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/users_avatar"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_firstName" />

    <TextView
        android:id="@+id/tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="firstName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_lastName"/>

    <TextView
        android:id="@+id/tv_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="lastName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_username"/>

    <EditText
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:minEms="8"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        android:minEms="8"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_enter"
        />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_enter"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="@id/tv_username"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>